--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <input type="hidden" id="totalCount" th:value="${userListCount}"/>
     <table class="list-table">
         <thead class="list-head">
             <tr class="flex-row align-items-center">
@@ -20,27 +21,28 @@
             </tr>
         </thead>
         <tbody class="list-body">
-            <input type="hidden" id="totalCount" th:value="${userListCount}"/>
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(userList)}">
                 <td style="width:100%" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(userList)}" th:each="user: ${userList}">
-                <td style="width:3.2%;" class="align-right p-0">
-                    <img class="profile-photo" th:src="@{{avatarPath}(avatarPath=${user.avatarPath})}" width="27" height="27" alt="profile pic"/>
-                </td>
-                <td style="width:9.8%;" class="align-left underline">
-                    <a th:text="${user.userName}"
-                       th:onclick="'location.href=\'' + @{/users/{userKey}/edit(userKey=${user.userKey})} + '\''">
-                    </a>
-                </td>
-                <td style="width:10%;" class="align-left" th:text="${user.userId}"></td>
-                <td style="width:16%;" class="align-left" th:text="${user.email}"></td>
-                <td style="width:16%;" class="align-left" th:text="${user.department}"></td>
-                <td style="width:10%;" class="align-left" th:text="${user.position}"></td>
-                <td style="width:10%;" class="align-left" th:text="${user.officeNumber}"></td>
-                <td style="width:10%;" class="align-left" th:text="${user.mobileNumber}"></td>
-                <td style="width:15%;" class="align-left" th:name="createDt" th:text="${user.createDt}"></td>
-            </tr>
+            <th:block th:fragment="list">
+                <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(userList)}" th:each="user: ${userList}">
+                    <td style="width:3.2%;" class="align-right p-0">
+                        <img class="profile-photo" th:src="@{{avatarPath}(avatarPath=${user.avatarPath})}" width="27" height="27" alt="profile pic"/>
+                    </td>
+                    <td style="width:9.8%;" class="align-left underline">
+                        <a th:text="${user.userName}"
+                           th:onclick="'location.href=\'' + @{/users/{userKey}/edit(userKey=${user.userKey})} + '\''">
+                        </a>
+                    </td>
+                    <td style="width:10%;" class="align-left" th:text="${user.userId}"></td>
+                    <td style="width:16%;" class="align-left" th:text="${user.email}"></td>
+                    <td style="width:16%;" class="align-left" th:text="${user.department}"></td>
+                    <td style="width:10%;" class="align-left" th:text="${user.position}"></td>
+                    <td style="width:10%;" class="align-left" th:text="${user.officeNumber}"></td>
+                    <td style="width:10%;" class="align-left" th:text="${user.mobileNumber}"></td>
+                    <td style="width:15%;" class="align-left date-time" th:text="${user.createDt}"></td>
+                </tr>
+            </th:block>
         </tbody>
     </table>
 </body>
