--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -90,13 +90,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/boards/articles?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/boards/articles?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+            restSubmit('get', '/boards/articles?' + urlParam, isScroll);
         }
 
         //게시판 관리 등록
@@ -112,102 +110,51 @@
                 async: false,
                 callbackFunc: function(response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const boardTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            boardTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('boardList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let boardDtEle = document.querySelectorAll('td[name=boardDt]');
-                        for (let i = 0; i < boardDtEle.length; i++) {
-                            boardDtEle[i].textContent = i18n.userDateTime(boardDtEle[i].textContent);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                //스크롤이 맨 마지막에 있을 경우
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getBoardList(true);
+                        setDateTimeFormat(document.getElementById('boardList'));
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    //스크롤이 맨 마지막에 있을 경우
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            getBoardList(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 },
                 showProgressbar: false
             };
             aliceJs.sendXhr(opt);
         }
 
-        //Tr 동적 데이터 만들기
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
-
-            let tdBoardSeq = document.createElement('td');
-            tdBoardSeq.style.width = '10%';
-            tdBoardSeq.className = 'align-left';
-            tdBoardSeq.innerText = data.boardSeq;
-
-            let tdBoardCategoryName = document.createElement('td');
-            tdBoardCategoryName.className = 'align-left';
-            tdBoardCategoryName.style.width = '15%';
-            tdBoardCategoryName.innerText = data.boardCategoryName;
-
-            let tdBoardTitle = document.createElement('td');
-            tdBoardTitle.className = 'align-left underline';
-            tdBoardTitle.style.width = '30%';
-            let aBoardTitle = document.createElement('a');
-            aBoardTitle.href = '/boards/articles/'+ data.boardId +'/view';
-            aBoardTitle.innerText = data.boardTitle;
-            tdBoardTitle.appendChild(aBoardTitle);
-
-            let tdReplyCount = document.createElement('td');
-            tdReplyCount.className = 'align-left';
-            tdReplyCount.style.width = '10%';
-            tdReplyCount.innerText = data.replyCount;
-
-            let tdReadCount = document.createElement('td');
-            tdReadCount.className = 'align-left';
-            tdReadCount.style.width = '10%';
-            tdReadCount.innerText = data.readCount;
-
-            let tdCreateUserName = document.createElement('td');
-            tdCreateUserName.className = 'align-left';
-            tdCreateUserName.style.width = '10%';
-            tdCreateUserName.innerText = data.createUserName;
-
-            let tdCreateDt = document.createElement('td');
-            tdCreateDt.className = 'align-left';
-            tdCreateDt.style.width = '15%';
-            tdCreateDt.innerText = i18n.userDateTime(data.createDt);
-
-            tr.appendChild(tdBoardSeq);
-            tr.appendChild(tdBoardCategoryName);
-            tr.appendChild(tdBoardTitle);
-            tr.appendChild(tdReplyCount);
-            tr.appendChild(tdReadCount);
-            tr.appendChild(tdCreateUserName);
-            tr.appendChild(tdCreateDt);
-            div.appendChild(tr);
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            });
         }
-
         /* ]]> */
     </script>
 </th:block>
