--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -51,13 +51,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/boards?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/boards?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+            restSubmit('get', '/boards?' + urlParam, isScroll);
         }
 
         // 게시판 관리 등록
@@ -73,85 +71,50 @@
                 async: false,
                 callbackFunc: function(response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const boardTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            boardTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('boardAdminList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let boardAdminDtEle = document.querySelectorAll('td[name=boardAdminDt]');
-                        for (let i = 0; i < boardAdminDtEle.length; i++) {
-                            boardAdminDtEle[i].textContent = i18n.userDateTime(boardAdminDtEle[i].textContent);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                //스크롤이 맨 마지막에 있을 경우
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getBoardAdminList(true);
+                        setDateTimeFormat(document.getElementById('boardAdminList'));
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    //스크롤이 맨 마지막에 있을 경우
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            getBoardAdminList(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 },
                 showProgressbar: false
             };
             aliceJs.sendXhr(opt);
         }
-        // Tr 동적 데이터 만들기
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
 
-            let tdBoardAdminTitle = document.createElement('td');
-            tdBoardAdminTitle.style.width = '65%';
-            tdBoardAdminTitle.className = 'align-left underline';
-            let aBoardAdminTitle = document.createElement('a');
-            if (document.getElementsByName('isRole')[0].value === 'true') {
-                aBoardAdminTitle.href = '/boards/'+ data.boardAdminId +'/edit';
-            } else {
-                aBoardAdminTitle.href = '/boards/'+ data.boardAdminId +'/view';
-            }
-            aBoardAdminTitle.innerText = data.boardAdminTitle;
-            tdBoardAdminTitle.appendChild(aBoardAdminTitle);
-
-            let tdBoardBoardCount = document.createElement('td');
-            tdBoardBoardCount.className = 'align-left';
-            tdBoardBoardCount.innerText = data.boardBoardCount;
-            tdBoardBoardCount.style.width = '10%';
-
-            let tdCreateUserName = document.createElement('td');
-            tdCreateUserName.className = 'align-left';
-            tdCreateUserName.innerText = data.createUserName;
-            tdCreateUserName.style.width = '10%';
-
-            let tdCreateDt = document.createElement('td');
-            tdCreateDt.className = 'align-left';
-            tdCreateDt.innerText = i18n.userDateTime(data.createDt);
-            tdCreateDt.style.width = '15%';
-
-            tr.appendChild(tdBoardAdminTitle);
-            tr.appendChild(tdBoardBoardCount);
-            tr.appendChild(tdCreateUserName);
-            tr.appendChild(tdCreateDt);
-            div.appendChild(tr);
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            });
         }
         /*]]>*/
     </script>
