--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -5,38 +5,40 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<input type="hidden" id="totalCount" th:value="${chartListCount}"/>
 <table class="list-table">
     <thead class="list-head">
-    <tr class="flex-row align-items-center">
-        <th style="width: 15%;" class="align-left" th:text="#{chart.label.type}"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{chart.label.name}"></th>
-        <th style="width: 25%;" class="align-left" th:text="#{chart.label.description}"></th>
-        <th style="width: 10%;" class="align-center" th:text="#{common.label.edit}"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{common.label.writer}"></th>
-        <th style="width: 20%;" class="align-left" th:text="#{common.label.writeDate}"></th>
-    </tr>
+        <tr class="flex-row align-items-center">
+            <th style="width: 15%;" class="align-left" th:text="#{chart.label.type}"></th>
+            <th style="width: 15%;" class="align-left" th:text="#{chart.label.name}"></th>
+            <th style="width: 25%;" class="align-left" th:text="#{chart.label.description}"></th>
+            <th style="width: 10%;" class="align-center" th:text="#{common.label.edit}"></th>
+            <th style="width: 15%;" class="align-left" th:text="#{common.label.writer}"></th>
+            <th style="width: 20%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+        </tr>
     </thead>
     <tbody class="list-body">
-    <input type="hidden" id="totalCount" th:value="${chartListCount}"/>
-    <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(chartList)}">
-        <td style="width:100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
-        <td style="width: 15%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
-        <td sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')" style="width: 15%;"
-            class="align-left underline point-fill pointer" th:onclick="openChartViewModal([[${chart.chartId}]])"
-            th:text="${chart.chartName}">
-        </td>
-        <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
-        <td style="width: 10%;" class="align-center">
-            <button type="button" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
-                    th:onclick="openChartEditModal([[${chart.chartId}]])">
-                <span class="icon-edit"></span>
-            </button>
-        </td>
-        <td style="width: 15%;" class="align-left" th:text="${chart.createUserName}"></td>
-        <td style="width: 20%;" class="align-left" th:name="chartDt" th:text="${chart.createDt}"></td>
-    </tr>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(chartList)}">
+            <td style="width:100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <th:block th:fragment="list">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
+                <td style="width: 15%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
+                <td sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')" style="width: 15%;"
+                    class="align-left underline point-fill pointer" th:onclick="openChartViewModal([[${chart.chartId}]])"
+                    th:text="${chart.chartName}">
+                </td>
+                <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
+                <td style="width: 10%;" class="align-center">
+                    <button type="button" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
+                            th:onclick="openChartEditModal([[${chart.chartId}]])">
+                        <span class="icon-edit"></span>
+                    </button>
+                </td>
+                <td style="width: 15%;" class="align-left" th:text="${chart.createUserName}"></td>
+                <td style="width: 20%;" class="align-left date-time" th:text="${chart.createDt}"></td>
+            </tr>
+        </th:block>
     </tbody>
 </table>
 </body>
