--- a/src/main/resources/public/template/custom-code/customCodeList.html
+++ b/src/main/resources/public/template/custom-code/customCodeList.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <input th:type="hidden" id="totalCount" name="totalCount" th:value="${customCodeCount}"/>
     <table class="list-table">
         <thead class="list-head">
             <tr class="flex-row align-items-center">
@@ -15,21 +16,22 @@
             </tr>
         </thead>
         <tbody class="list-body">
-            <input th:type="hidden" id="totalCount" name="totalCount" th:value="${customCodeCount}"/>
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(customCodeList)}">
                 <td style="width:100%" colspan="4" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr class="flex-row align-items-center" th:each="customCode : ${customCodeList}">
-                <td style="width:50%" class="align-left underline">
-                    <a sec:authorize="!hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
-                       th:href="@{/custom-codes/{id}/view(id=${customCode.customCodeId})}"></a>
-                    <a sec:authorize="hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
-                       th:href="@{/custom-codes/{id}/edit(id=${customCode.customCodeId})}"></a>
-                </td>
-                <td style="width:20%" class="align-left" th:text="#{|customCode.label.${customCode.type}|}"></td>
-                <td style="width:15%" class="align-left" th:text="${customCode.createUserName}"></td>
-                <td style="width:15%" class="align-left" th:name="createDt" th:text="${customCode.createDt}"></td>
-            </tr>
+            <th:block th:fragment="list">
+                <tr class="flex-row align-items-center" th:each="customCode : ${customCodeList}">
+                    <td style="width:50%" class="align-left underline">
+                        <a sec:authorize="!hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
+                           th:href="@{/custom-codes/{id}/view(id=${customCode.customCodeId})}"></a>
+                        <a sec:authorize="hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
+                           th:href="@{/custom-codes/{id}/edit(id=${customCode.customCodeId})}"></a>
+                    </td>
+                    <td style="width:20%" class="align-left" th:text="#{|customCode.label.${customCode.type}|}"></td>
+                    <td style="width:15%" class="align-left" th:text="${customCode.createUserName}"></td>
+                    <td style="width:15%" class="align-left date-time" th:text="${customCode.createDt}"></td>
+                </tr>
+            </th:block>
         </tbody>
     </table>
 </body>
