--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -89,13 +89,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/downloads?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/downloads?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+            restSubmit('get', '/downloads?' + urlParam, isScroll);
         }
 
         // REST API
@@ -107,97 +105,49 @@
                 showProgressbar: false,
                 callbackFunc: function (response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const downloadTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            downloadTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('downloadList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let downloadList = document.querySelectorAll('td[name=createDt]');
-                        for (let i = 0; i < downloadList.length; i++) {
-                            downloadList[i].textContent = i18n.userDateTime(downloadList[i].textContent);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                // 스크롤이 맨 마지막에 있을 경우
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getDownloadList(true);
+                        setDateTimeFormat(document.getElementById('downloadList'));
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    // 스크롤이 맨 마지막에 있을 경우
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            getDownloadList(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
         }
 
-        // Tr 동적 데이터 만들기
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
-
-            let tdDownloadSeq = document.createElement('td');
-            tdDownloadSeq.className = 'align-left';
-            tdDownloadSeq.style.width = '5%';
-            tdDownloadSeq.innerText = data.downloadSeq;
-
-            let tdDownloadCategory = document.createElement('td');
-            tdDownloadCategory.className = 'align-left';
-            tdDownloadCategory.style.width = '10%';
-            tdDownloadCategory.innerText = i18n.msg(data.downloadCategory);
-
-            let tdDownloadTitle = document.createElement('td');
-            tdDownloadTitle.className = 'align-left underline';
-            tdDownloadTitle.style.width = '45%';
-            let aDownloadTitle = document.createElement('a');
-            if (document.getElementsByName('isRole')[0].value === 'true') {
-                aDownloadTitle.href = '/downloads/'+ data.downloadId +'/edit';
-            } else {
-                aDownloadTitle.href = '/downloads/'+ data.downloadId +'/view';
-            }
-            aDownloadTitle.innerText = data.downloadTitle;
-            tdDownloadTitle.appendChild(aDownloadTitle);
-
-            let tdCreateUserName = document.createElement('td');
-            tdCreateUserName.className = 'align-left';
-            tdCreateUserName.style.width = '10%';
-            tdCreateUserName.innerText = data.createUserName;
-
-            let tdCreateDt = document.createElement('td');
-            tdCreateDt.className = 'align-left';
-            tdCreateDt.style.width = '20%';
-            tdCreateDt.innerText = i18n.userDateTime(data.createDt);
-
-            let tdView = document.createElement('td');
-            tdView.className = 'align-left';
-            tdView.style.width = '10%';
-            tdView.innerText = data.views;
-
-            tr.appendChild(tdDownloadSeq);
-            tr.appendChild(tdDownloadCategory);
-            tr.appendChild(tdDownloadTitle);
-            tr.appendChild(tdCreateUserName);
-            tr.appendChild(tdCreateDt);
-            tr.appendChild(tdView);
-            div.appendChild(tr);
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            });
         }
         /*]]>*/
     </script>
