--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -95,13 +95,12 @@
                 if (offsetCount === 0) {
                    offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/notices?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/notices?' + urlParam, isScroll);
+
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+            restSubmit('get', '/notices?' + urlParam, isScroll);
         }
 
         //REST API
@@ -113,40 +112,20 @@
                 showProgressbar: false,
                 callbackFunc: function (response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const noticeTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            noticeTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('noticeList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let createDtList = document.querySelectorAll('td[name=createDt]');
-                        let popDtList = document.querySelectorAll('td[name=popDt]');
-                        let noticeDtList = document.querySelectorAll('td[name=noticeDt]');
-                        for (let i = 0; i < createDtList.length; i++) {
-                            createDtList[i].textContent = i18n.userDateTime(createDtList[i].textContent);
-                            let popDt = popDtList[i].textContent.split('~');
-                            if (popDt[0] !== 'null') {
-                                popDtList[i].textContent = i18n.userDateTime(popDt[0])
-                                    + ' ~ ' + i18n.userDateTime(popDt[1]);
-                            } else {
-                                popDtList[i].textContent = '';
-                            }
-                            let noticeDt = noticeDtList[i].textContent.split('~');
-                            if (noticeDt[0] !== 'null') {
-                                noticeDtList[i].textContent = i18n.userDateTime(noticeDt[0])
-                                    + ' ~ ' + i18n.userDateTime(noticeDt[1]);
-                            } else {
-                                noticeDtList[i].textContent = '';
-                            }
-                        }
+                        setDateTimeFormat(document.getElementById('noticeList'));
                         OverlayScrollbars(document.querySelector('.list-body'), {
                             className: 'scrollbar',
                             callbacks: {
@@ -168,6 +147,26 @@
             };
             aliceJs.sendXhr(opt);
         }
+
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                const dtList = dt.textContent.split('~');
+                if (dtList.length > 1) {
+                    if (dtList[0] !== 'null') {
+                        dt.textContent = i18n.userDateTime(dtList[0].trim())
+                            + ' ~ ' + i18n.userDateTime(dtList[1].trim());
+                    } else {
+                        dt.textContent = '';
+                    }
+                } else {
+                    dt.textContent = i18n.userDateTime(dtList[0].trim());
+                }
+            });
+        }
+
         // Tr 동적 데이터 만들기
         function getDataTemplate(data) {
             let div = document.querySelector('.list-body .os-content');
