--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -57,11 +57,10 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                restSearchSubmit('GET', '/rest/processes?search=' + encodeURIComponent(search) + '&offset=' + offsetCount, isScroll);
             } else {
                 offsetCount = 0;
-                restSearchSubmit('GET', '/processes?search=' + encodeURIComponent(search) + '&offset=' + offsetCount, isScroll);
             }
+            restSearchSubmit('GET', '/processes?search=' + encodeURIComponent(search) + '&offset=' + offsetCount + '&isScroll=' + isScroll, isScroll);
         }
 
         // 유효성 검증
@@ -421,135 +420,48 @@
                 showProgressbar: false,
                 callbackFunc: function(response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function (data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
                         }
-
+                        const processTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            processTbody.appendChild(tempTb.rows[i]);
+                        }
                     } else {
                         document.getElementById('processList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let processDtEle = document.querySelectorAll('td[name=createDt]');
-                        for (let i = 0; i < processDtEle.length; i++) {
-                            processDtEle[i].textContent = i18n.userDateTime(processDtEle[i].textContent);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getProcessList(document.getElementById('search').value, true);
+                        setDateTimeFormat(document.getElementById('processList'));
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            getProcessList(document.getElementById('search').value, true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
         }
 
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
-
-            // TODO: 권한에 따라 view or edit
-            let tdProcessName = document.createElement('td');
-            tdProcessName.className = 'align-left underline';
-            tdProcessName.style.width = '20%';
-            let processNameObject;
-            if (data.enabled == true) {
-                processNameObject = document.createElement('a');
-                processNameObject.onclick = function() {
-                    if (document.getElementById('updatable').value === 'true') {
-                        openProcessEdit(data.id, false);
-                    } else {
-                        openProcessEdit(data.id, true);
-                    }
-                }
-            } else {
-                if (data.status == STATUS_USE) {
-                    processNameObject = document.createElement('a');
-                    processNameObject.onclick = function() {
-                        openProcessEdit(data.id, true);
-                    }
-                } else {
-                    processNameObject = document.createElement('span');
-                }
-            }
-            processNameObject.innerText = data.name;
-            tdProcessName.appendChild(processNameObject);
-
-            let tdProcessPreview = document.createElement('td');
-            tdProcessPreview.className = 'align-center';
-            tdProcessPreview.style.width = '10%';
-            let processPreviewBtn = document.createElement('button');
-            let spanProcessPreview = document.createElement('span');
-            processPreviewBtn.className = 'default-fill btn-popup';
-            spanProcessPreview.className = 'icon-search';
-            processPreviewBtn.onclick = function () {
-                openProcessDesignerView(data.id);
-            }
-            processPreviewBtn.appendChild(spanProcessPreview);
-            tdProcessPreview.appendChild(processPreviewBtn);
-
-
-            let tdProcessUpdate = document.createElement('td');
-            tdProcessUpdate.className = 'align-center';
-            tdProcessUpdate.style.width = '10%';
-            if (document.getElementById('updatable').value === 'true' && data.enabled == true) {
-                let updateBtn = document.createElement('button');
-                let spanUpdate = document.createElement('span');
-                spanUpdate.className='icon-edit';
-                tdProcessUpdate.onclick = function() {
-                    openProcessDesignerEdit(data.id);
-                }
-                updateBtn.appendChild(spanUpdate);
-                tdProcessUpdate.appendChild(updateBtn);
-            }
-
-            let tdStatus = document.createElement('td');
-            tdStatus.className = 'align-center';
-            tdStatus.style.width = '10%';
-            tdStatus.innerText = i18n.msg(data.status);
-
-            let tdDescription = document.createElement('td');
-            tdDescription.className = 'align-left';
-            tdDescription.style.width = '28%';
-            tdDescription.innerText = data.description;
-
-            let tdWriter = document.createElement('td');
-            tdWriter.className = 'align-left';
-            tdWriter.style.width = '10%';
-            tdWriter.innerText = data.createUserName;
-
-            let tdWriteDate = document.createElement('td');
-            tdWriteDate.className = 'align-left';
-            tdWriteDate.style.width = '12%';
-            tdWriteDate.innerText = i18n.userDateTime(data.createDt);
-
-            tr.appendChild(tdProcessName);
-            tr.appendChild(tdProcessPreview);
-            tr.appendChild(tdProcessUpdate);
-            tr.appendChild(tdStatus);
-            tr.appendChild(tdDescription);
-            tr.appendChild(tdWriter);
-            tr.appendChild(tdWriteDate);
-            div.appendChild(tr);
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            });
         }
     </script>
 </th:block>
