--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -50,13 +50,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/schedulers?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/schedulers?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+            restSubmit('get', '/schedulers?' + urlParam, isScroll);
         }
 
         function openSchedulerAdd() {
@@ -71,112 +69,49 @@
                 async: false,
                 callbackFunc: function(response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const schedulerTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        setDateTimeFormat(tempTb);
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            schedulerTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('schedulerList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        let executeTimeEle = document.querySelectorAll('td[name=executeTime]');
-                        for (let i = 0; i < executeTimeEle.length; i++) {
-                            executeTimeEle[i].textContent = i18n.userDateTime(executeTimeEle[i].textContent);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getSchedulerList(true);
+                        setDateTimeFormat(document.getElementById('schedulerList'));
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            getSchedulerList(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 },
                 showProgressbar: false
             };
             aliceJs.sendXhr(opt);
         }
-        // Tr 동적 데이터 만들기
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
 
-            let tdTaskName = document.createElement('td');
-            tdTaskName.style.width = '20%';
-            tdTaskName.className = 'align-left underline';
-            let aTaskName = document.createElement('a');
-            if (document.getElementsByName('isRole')[0].value === 'true') {
-                aTaskName.href = '/schedulers/'+ data.taskId +'/edit';
-            } else {
-                aTaskName.href = '/boards/'+ data.taskId +'/view';
-            }
-            aTaskName.innerText = data.taskName;
-            tdTaskName.appendChild(aTaskName);
-
-            let tdStatus = document.createElement('td');
-            tdStatus.className = 'align-center';
-            tdStatus.innerText = i18n.msg('scheduler.status.' + data.useYn);
-            tdStatus.style.width = '5%';
-
-            let tdTaskType = document.createElement('td');
-            tdTaskType.className = 'align-center';
-            tdTaskType.innerText = data.taskType;
-            tdTaskType.style.width = '8%';
-
-            let tdExecuteClass= document.createElement('td');
-            tdExecuteClass.className = 'align-left';
-            tdExecuteClass.innerText = data.executeClass;
-            tdExecuteClass.style.width = '27%';
-
-            let tdExecuteCycleType = document.createElement('td');
-            tdExecuteCycleType.className = 'align-center';
-            tdExecuteCycleType.innerText = data.executeCycleType;
-            tdExecuteCycleType.style.width = '10%';
-
-            let tdExecuteDetail = document.createElement('td');
-            tdExecuteDetail.className = 'align-left';
-            tdExecuteDetail.style.width = '10%';
-            if (data.executeCycleType === 'cron') {
-                tdExecuteDetail.innerHTML = data.cronExpression;
-            } else {
-                tdExecuteDetail.innerHTML = data.executeCyclePeriod;
-            }
-
-            let tdLastExecuteTime = document.createElement('td');
-            tdLastExecuteTime.className = 'align-left';
-            tdLastExecuteTime.innerText = i18n.userDateTime(data.executeTime);
-            tdLastExecuteTime.style.width = '12%';
-
-            let tdResult = document.createElement('td');
-            tdResult.className = 'align-center';
-            tdResult.innerText = i18n.msg('scheduler.result.' + data.result);
-            tdResult.style.width = '8%';
-
-            tr.appendChild(tdTaskName);
-            tr.appendChild(tdStatus);
-            tr.appendChild(tdTaskType);
-            tr.appendChild(tdExecuteClass);
-            tr.appendChild(tdExecuteCycleType);
-            tr.appendChild(tdExecuteDetail);
-            tr.appendChild(tdLastExecuteTime);
-            tr.appendChild(tdResult);
-            div.appendChild(tr);
+        /**
+         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+         */
+        function setDateTimeFormat(elem) {
+            elem.querySelectorAll('.date-time').forEach(dt => {
+                dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            });
         }
         /*]]>*/
     </script>
