--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -9,36 +9,38 @@
         <img class="no-data-icon" />
         <span class="no-data-text" th:text="#{common.msg.noData}"></span>
     </div>
-    <div class="card flex-row" th:unless="${#arrays.isEmpty(tokenList)}" th:each="token: ${tokenList}"
-         sec:authorize="hasAuthority('token.read')" th:onclick="openTokenEdit([[${token.tokenId}]])">
-        <div class="document-color" th:style="|background-color: ${token.documentColor}|"></div>
-        <div class="document-row flex-fill flex-row justify-content-between">
-            <div class="document-row-content">
-                <div class="document-title flex-row align-items-center">
-                    <h3 th:text="${token.documentName}" class="mr-2 text-ellipsis"></h3>
-                    <span th:text="${token.documentNo}" class="document-numbering text-ellipsis"></span>
-                </div>
-                <div class="document-topic">
-                    <label class="topic" th:each="topic: ${token.topics}" th:text="${topic}"></label>
-                </div>
-            </div>
-            <div class="document-row-info">
-                <div class="document-detail flex-row align-items-center float-right">
-                    <div class="document-user inline-flex align-items-center justify-content-center">
-                        <img class="profile-photo mr-2" alt="profile pic" th:src="${token.avatarPath}" width="32" height="32">
-                        <span class="user-name" th:text="${token.createUserName}"></span>
+    <th:block th:fragment="list">
+        <div class="card flex-row" th:unless="${#arrays.isEmpty(tokenList)}" th:each="token: ${tokenList}"
+             sec:authorize="hasAuthority('token.read')" th:onclick="openTokenEdit([[${token.tokenId}]])">
+            <div class="document-color" th:style="|background-color: ${token.documentColor}|"></div>
+            <div class="document-row flex-fill flex-row justify-content-between">
+                <div class="document-row-content">
+                    <div class="document-title flex-row align-items-center">
+                        <h3 th:text="${token.documentName}" class="mr-2 text-ellipsis"></h3>
+                        <span th:text="${token.documentNo}" class="document-numbering text-ellipsis"></span>
                     </div>
-                    <span class="vertical-bar"></span>
-                    <span class="create-dt" th:text="${token.createDt}"></span>
-                    <span class="vertical-bar"></span>
-                    <span class="element-name" th:text="${token.elementName}"></span>
+                    <div class="document-topic">
+                        <label class="topic" th:each="topic: ${token.topics}" th:text="${topic}"></label>
+                    </div>
                 </div>
-                <div class="document-tag align-right">
-                    <span class="tag align-center text-ellipsis" th:each="tag: ${token.tags}" th:text="${tag}"></span>
+                <div class="document-row-info">
+                    <div class="document-detail flex-row align-items-center float-right">
+                        <div class="document-user inline-flex align-items-center justify-content-center">
+                            <img class="profile-photo mr-2" alt="profile pic" th:src="${token.avatarPath}" width="32" height="32">
+                            <span class="user-name" th:text="${token.createUserName}"></span>
+                        </div>
+                        <span class="vertical-bar"></span>
+                        <span class="create-dt date-time" th:text="${token.createDt}"></span>
+                        <span class="vertical-bar"></span>
+                        <span class="element-name" th:text="${token.elementName}"></span>
+                    </div>
+                    <div class="document-tag align-right">
+                        <span class="tag align-center text-ellipsis" th:each="tag: ${token.tags}" th:text="${tag}"></span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </th:block>
 </div>
 </body>
 </html>
