--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<input type="hidden" id="totalCount" th:value="${documentCount}"/>
 <table class="list-table">
     <thead class="list-head">
         <tr class="flex-row align-items-center">
@@ -18,37 +19,38 @@
         </tr>
     </thead>
     <tbody class="list-body">
-        <input type="hidden" id="totalCount" th:value="${documentCount}"/>
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(documentList)}">
             <td style="width:100%" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
-        <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
-            <td width="25%" class="align-left">
-                <div class="document-color-circle" th:style="|background-color:${document.documentColor}|"></div>
-                <span th:text="${document.documentName}"></span>
-            </td>
-            <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
-            <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
-            <td style="width: 15%;" class="align-left">
-                <th:block th:if="${document.documentGroup != null && document.documentGroup != ''}">
-                    <th:block th:each="group, index : ${groupList}">
-                        <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}"></label>
+        <th:block th:fragment="list">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
+                <td width="25%" class="align-left">
+                    <div class="document-color-circle" th:style="|background-color:${document.documentColor}|"></div>
+                    <span th:text="${document.documentName}"></span>
+                </td>
+                <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
+                <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
+                <td style="width: 15%;" class="align-left">
+                    <th:block th:if="${document.documentGroup != null && document.documentGroup != ''}">
+                        <th:block th:each="group, index : ${groupList}">
+                            <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}"></label>
+                        </th:block>
                     </th:block>
-                </th:block>
-            </td>
-            <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
-            <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}"></td>
-            <td style="width: 10%;" class="align-center">
-                <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
-                    <span class="icon-edit"></span>
-                </button>
-            </td>
-            <td style="width: 10%;" class="align-center">
-                <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
-                    <span class="icon-delete"></span>
-                </button>
-            </td>
-        </tr>
+                </td>
+                <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
+                <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}"></td>
+                <td style="width: 10%;" class="align-center">
+                    <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
+                        <span class="icon-edit"></span>
+                    </button>
+                </td>
+                <td style="width: 10%;" class="align-center">
+                    <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
+                        <span class="icon-delete"></span>
+                    </button>
+                </td>
+            </tr>
+        </th:block>
     </tbody>
 </table>
 </body>
